--- a/index.html
+++ b/index.html
@@ -357,7 +357,9 @@
 
           <li>
             <a class="nav-item clearfix" href="https://www.pexels.com/zh-tw/videos/" target="_blank">
-              <img class="nav-img" avatar="榜" color="#ED5736" style="margin-bottom: 40px;">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/faviconii.ico);">
+              </div>
               <div class="nav-name">Pexels</div>
               <p>熱門免費圖庫影片</p>
             </a>
@@ -366,7 +368,7 @@
           <li>
             <a class="nav-item clearfix" href="https://www.videezy.com/" target="_blank">
               <div class="nav-img"
-                style="margin-bottom:40px;background-image: url(/images/);">
+                style="margin-bottom:40px;background-image: url(/images/favi1n.ico);">
               </div>
               <div class="nav-name">videezy</div>
               <p>免費高清素材&4K 視頻！</p>
@@ -376,7 +378,7 @@
           <li>
             <a class="nav-item clearfix" href="https://texturelabs.org/" target="_blank">
               <div class="nav-img"
-                style="margin-bottom:40px;background-image: url(/images/);">
+                style="margin-bottom:40px;background-image: url(/images/2730362.png);">
               </div>
               <div class="nav-name">Texturelabs.org</div>
               <p>這是專門為平面設計師、藝術家和插畫家創建的免費紋理和教程的集合。可以免費下載並在您的個人和商業作品中使用</p>
@@ -386,7 +388,7 @@
           <li>
             <a class="nav-item clearfix" href="https://pixabay.com/" target="_blank">
               <div class="nav-img"
-                style="margin-bottom:40px;background-image: url(/images/);">
+                style="margin-bottom:40px;background-image: url(/images/ficon-32x32.png);">
               </div>
               <div class="nav-name">Pixabay</div>
               <p>我們才華橫溢的社區分享了超過 410 萬張高質量庫存圖片、視頻和音樂。</p>
@@ -396,7 +398,7 @@
           <li>
             <a class="nav-item clearfix" href="https://www.foodiesfeed.com/" target="_blank">
               <div class="nav-img"
-                style="margin-bottom:40px;background-image: url(/images/);">
+                style="margin-bottom:40px;background-image: url(/images/ff.svg);">
               </div>
               <div class="nav-name">Foodiesfeed</div>
               <p>搜索超撾2613張免费食物照片</p>
