--- a/index.html
+++ b/index.html
@@ -454,12 +454,32 @@
           </li>
 
           <li>
+            <a class="nav-item clearfix" href="https://soupian.pro/" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/iconme.png);">
+              </div>
+              <div class="nav-name">搜片.COM</div>
+              <p>搜索你想看的，在線、BT磁力、雲盤、字幕</p>
+            </a>
+          </li>
+
+          <li>
             <a class="nav-item clearfix" href="https://www.nivod4.tv/" target="_blank">
               <div class="nav-img"
                 style="margin-bottom:40px;background-image: url(/images/33.png);">
               </div>
               <div class="nav-name">泥視頻</div>
               <p>大陸影視站</p>
+            </a>
+          </li>
+
+          <li>
+            <a class="nav-item clearfix" href="https://www.hanju7.com/" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/haa.ico);">
+              </div>
+              <div class="nav-name">韓劇網</div>
+              <p>中文最大韓劇門戶</p>
             </a>
           </li>
 
