--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
       </div>
 
       <div class="nav-cell clearfix">
-        <h2> 📕📕 免費圖片素材
+        <h2> 📕📕 免費圖片視頻素材
           <!-- <a class="more" href="">更多</a> -->
         </h2>
         <ul class="nav-list">
@@ -402,6 +402,144 @@
               </div>
               <div class="nav-name">Foodiesfeed</div>
               <p>搜索超撾2613張免费食物照片</p>
+            </a>
+          </li>
+
+          <li>
+            <a class="nav-item clearfix" href="https://unsplash.com" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/unsplash.jpg);">
+              </div>
+              <div class="nav-name">Unsplash</div>
+              <p>免費，由世界各地創作者提供的高質量圖片</p>
+            </a>
+          </li>
+
+          <li>
+            <a class="nav-item clearfix" href="https://www.splitshire.com" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/splitshire.jpg);">
+              </div>
+              <div class="nav-name">SplitShire</div>
+              <p>免費，精美獨特的圖片庫</p>
+            </a>
+          </li>
+
+          <li>
+            <a class="nav-item clearfix" href="https://stocksnap.io" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/stocksnap.jpg);">
+              </div>
+              <div class="nav-name">StolSnap</div>
+              <p>免費，每天都更新圖片</p>
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="nav-cell clearfix">
+        <h2> ⛰️ Icon
+          <!-- <a class="more" href="">更多</a> -->
+        </h2>
+        <ul class="nav-list">
+
+          <li>
+            <a class="nav-item clearfix" href="https://iconpark.oceanengine.com/home" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/iconpark.jpg);">
+              </div>
+              <div class="nav-name">IconPark</div>
+              <p>免費，規範、統一、多風格切換</p>
+            </a>
+          </li>
+
+          <li>
+            <a class="nav-item clearfix" href="https://www.iconfont.cn" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/iconfont.png);">
+              </div>
+              <div class="nav-name">Iconfont</div>
+              <p>免費，中文，圖示數量豐富，包含插畫資源</p>
+            </a>
+          </li>
+
+          <li>
+            <a class="nav-item clearfix" href="https://ikonate.com" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/ikonate.jpg);">
+              </div>
+              <div class="nav-name">Ikonate</div>
+              <p>免費，樣式統一，可調大小、粗細、顏色等參數</p>
+            </a>
+          </li>
+
+          <li>
+            <a class="nav-item clearfix" href="https://remixicon.com" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/remix.jpg);">
+              </div>
+              <div class="nav-name">Remix Icon</div>
+              <p>免費，精緻統一的開源圖示</p>
+            </a>
+          </li>
+
+          <li>
+            <a class="nav-item clearfix" href="https://icons8.com" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/icons8.jpg);">
+              </div>
+              <div class="nav-name">ICONS8</div>
+              <p>多風格</p>
+            </a>
+          </li>
+
+          <li>
+            <a class="nav-item clearfix" href="https://www.iconfinder.com" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/iconfinder.jpg);">
+              </div>
+              <div class="nav-name">ICONFINDER</div>
+              <p>型別豐富的圖示庫</p>
+            </a>
+          </li>
+
+          <li>
+            <a class="nav-item clearfix" href="https://emojixd.com" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/emojixd.jpg);">
+              </div>
+              <div class="nav-name">Emoji XD</div>
+              <p>線上Emoji百科全書，支援關鍵詞搜索</p>
+            </a>
+          </li>
+
+          <li>
+            <a class="nav-item clearfix" href="https://seeklogo.com" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/seeklogo.png);">
+              </div>
+              <div class="nav-name">seeklogo</div>
+              <p>免500000+ 個品牌 logo 圖片，包含 png 和向量格式</p>
+            </a>
+          </li>
+
+          <li>
+            <a class="nav-item clearfix" href="https://lordicon.com/" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/lordicon.png);">
+              </div>
+              <div class="nav-name">Lordicon</div>
+              <p>動畫圖示庫</p>
+            </a>
+          </li>
+
+          <li>
+            <a class="nav-item clearfix" href="https://iconscout.com" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/iconscout.jpg);">
+              </div>
+              <div class="nav-name">Iconscout</div>
+              <p>精美豐富，包含很多冷門型別</p>
             </a>
           </li>
         </ul>
