--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
           </li>
 
           <li>
-            <a class="nav-item clearfix" href="https://unsplash.com" target="_blank">
+            <a class="nav-item clearfix" href="https://unsplash.com/" target="_blank">
               <div class="nav-img"
                 style="margin-bottom:40px;background-image: url(/images/unsplash.jpg);">
               </div>
@@ -519,7 +519,7 @@
                 style="margin-bottom:40px;background-image: url(/images/seeklogo.png);">
               </div>
               <div class="nav-name">seeklogo</div>
-              <p>免500000+ 個品牌 logo 圖片，包含 png 和向量格式</p>
+              <p>免500000+個品牌 logo 圖片，包含 png 和向量格式</p>
             </a>
           </li>
 
@@ -546,7 +546,7 @@
       </div>
 
       <div class="nav-cell clearfix">
-        <h2> 🖥️ 電影資源
+        <h2> 🖥️ 電影資源讚
           <!-- <a class="more" href="">更多</a> -->
         </h2>
         <ul class="nav-list">
