--- a/index.html
+++ b/index.html
@@ -161,6 +161,16 @@
         <ul class="nav-list">
 
           <li>
+            <a class="nav-item clearfix" href="https://chat-gpt-next-web-liard-rho-19.vercel.app/" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/vecteezy.png);">
+              </div>
+              <div class="nav-name">GPT4</div>
+              <p>自行vercel部署免費gpt4</p>
+            </a>
+          </li>
+
+          <li>
             <a class="nav-item clearfix" href="https://wrtn.ai/" target="_blank">
               <div class="nav-img"
                 style="margin-bottom:40px;background-image: url(/images/tb38.png);">
@@ -228,6 +238,16 @@
               </div>
               <div class="nav-name">FakeGPT</div>
               <p>猶如官方</p>
+            </a>
+          </li>
+
+          <li>
+            <a class="nav-item clearfix" href="https://nova-oss.com/" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/NovaAI.ico);">
+              </div>
+              <div class="nav-name">NovaAI</div>
+              <p>Nova是一個免費、開源、易於使用且功能強大的API，用於存取各種人工智慧模型。</p>
             </a>
           </li>
         </ul>
@@ -628,6 +648,54 @@
               </div>
               <div class="nav-name">影視搜索</div>
               <p>最好用影視搜索各種資源</p>
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="nav-cell clearfix">
+        <h2> 🔍️ 學習網站
+          <!-- <a class="more" href="">更多</a> -->
+        </h2>
+        <ul class="nav-list">
+
+          <li>
+            <a class="nav-item clearfix" href="https://www.runoob.com/" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/RUboon.ico);">
+              </div>
+              <div class="nav-name">RUNOOB.COM</div>
+              <p>提供了程式設計的基礎技術教程, 介紹了HTML、CSS、Javascript、Python，Java，Ruby，C，PHP , MySQL等各種程式語言的基礎知識。</p>
+            </a>
+          </li>
+
+          <li>
+            <a class="nav-item clearfix" href="https://www.rrzxw.net/index.html" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/rrzxw.ico);">
+              </div>
+              <div class="nav-name">人人自學網</div>
+              <p>最全的自學教程網站就在人人自學網,可線上觀看免費視訊教程,我要自學網視訊教程,如3dmax視訊教程,cad視訊教程,excel視訊教程,flash視訊教程等！</p>
+            </a>
+          </li>
+
+          <li>
+            <a class="nav-item clearfix" href="https://www.doyoudo.com/" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/doyoudo.ico);">
+              </div>
+              <div class="nav-name">人人自學網</div>
+              <p>免費課程，付費課程</p>
+            </a>
+          </li>
+
+          <li>
+            <a class="nav-item clearfix" href="https://yunpan1.24kdh.cn/" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/yunpan1.png);">
+              </div>
+              <div class="nav-name">云盤資源社區</div>
+              <p>提供阿里云盤資源、影視資源、學習資源、軟體資源、動漫資源等分享。</p>
             </a>
           </li>
         </ul>
