--- a/index.html
+++ b/index.html
@@ -113,6 +113,16 @@
               <p>選課</p>
             </a>
           </li>
+
+          <li>
+            <a class="nav-item clearfix" href="https://jiun8631.vercel.app/" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/mstile.png);">
+              </div>
+              <div class="nav-name">鈞鈞博客</div>
+              <p>個人hugo搭建博客</p>
+            </a>
+          </li>
         </ul>
       </div>
 
@@ -230,7 +240,6 @@
             </a>
           </li>
 
-
           <li>
             <a class="nav-item clearfix" href="https://chat.zhile.io/?model=gpt-4" target="_blank">
               <div class="nav-img"
@@ -238,6 +247,16 @@
               </div>
               <div class="nav-name">FakeGPT</div>
               <p>猶如官方</p>
+            </a>
+          </li>
+
+          <li>
+            <a class="nav-item clearfix" href="https://chat.gpt.bz/#/chat" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/vecteezy2.png);">
+              </div>
+              <div class="nav-name">Free GPT4</div>
+              <p>國外免費GPT4</p>
             </a>
           </li>
 
@@ -684,7 +703,7 @@
               <div class="nav-img"
                 style="margin-bottom:40px;background-image: url(/images/doyoudo.ico);">
               </div>
-              <div class="nav-name">人人自學網</div>
+              <div class="nav-name">doyoudo</div>
               <p>免費課程，付費課程</p>
             </a>
           </li>
