--- a/index.html
+++ b/index.html
@@ -123,6 +123,16 @@
               <p>個人hugo搭建博客</p>
             </a>
           </li>
+
+          <li>
+            <a class="nav-item clearfix" href="https://yunbus.tw/#!stop/TAO6047" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/faviconji.jpg);">
+              </div>
+              <div class="nav-name">雲端公車中原</div>
+              <p>155.156即時動態</p>
+            </a>
+          </li>
         </ul>
       </div>
 
@@ -267,6 +277,16 @@
               </div>
               <div class="nav-name">NovaAI</div>
               <p>Nova是一個免費、開源、易於使用且功能強大的API，用於存取各種人工智慧模型。</p>
+            </a>
+          </li>
+
+          <li>
+            <a class="nav-item clearfix" href="https://ylsapp.com/" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/free4.png);">
+              </div>
+              <div class="nav-name">伊莉思免費GPT4</div>
+              <p>free鏡像</p>
             </a>
           </li>
         </ul>
@@ -471,6 +491,16 @@
               </div>
               <div class="nav-name">StolSnap</div>
               <p>免費，每天都更新圖片</p>
+            </a>
+          </li>
+
+          <li>
+            <a class="nav-item clearfix" href="https://www.pixground.com/wallpapers/ai-generated-wallpapers/" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/cropped-icon-32x32.png);">
+              </div>
+              <div class="nav-name">Pixground</div>
+              <p>AI生成的壁紙</p>
             </a>
           </li>
         </ul>
