--- a/index.html
+++ b/index.html
@@ -133,6 +133,16 @@
               <p>155.156即時動態</p>
             </a>
           </li>
+
+          <li>
+            <a class="nav-item clearfix" href="https://law.moj.gov.tw/LawClass/LawAll.aspx?pcode=B0000001&kw=%e6%b0%91%e6%b3%95" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/faviconly.png);">
+              </div>
+              <div class="nav-name">全國法規資料庫</div>
+              <p>民法所有條文</p>
+            </a>
+          </li>
         </ul>
       </div>
 
@@ -501,6 +511,16 @@
               </div>
               <div class="nav-name">Pixground</div>
               <p>AI生成的壁紙</p>
+            </a>
+          </li>
+
+          <li>
+            <a class="nav-item clearfix" href="https://arc.tencent.com/zh/ai-demos/humansegmentation" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/ARC.ico);">
+              </div>
+              <div class="nav-name">ARC</div>
+              <p>圖片摳圖、變高清</p>
             </a>
           </li>
         </ul>
