--- a/index.html
+++ b/index.html
@@ -299,6 +299,36 @@
               <p>free鏡像</p>
             </a>
           </li>
+
+          <li>
+            <a class="nav-item clearfix" href="https://faucet.openkey.cloud/" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/pe.ico);">
+              </div>
+              <div class="nav-name">GPT4水龍頭</div>
+              <p>每个邮箱每24小时可领取一个$1.00令牌用于开发讽试A1产品.</p>
+            </a>
+          </li>
+
+          <li>
+            <a class="nav-item clearfix" href="https://www.yeschat.ai/" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/logo1d2ae8b.jpg);">
+              </div>
+              <div class="nav-name">YesChat</div>
+              <p>所网站，限时免菱GPT4+Claude2</p>
+            </a>
+          </li>
+
+          <li>
+            <a class="nav-item clearfix" href="https://chat.gpt.bz/#/chat" target="_blank">
+              <div class="nav-img"
+                style="margin-bottom:40px;background-image: url(/images/vecteezy3.png);">
+              </div>
+              <div class="nav-name">Free GPT4</div>
+              <p>需要魔法，回答速度很快</p>
+            </a>
+          </li>
         </ul>
       </div>
 
